syntax = "proto3";

package jobworkerp.runner;

message WorkflowArgs {
  // # Workflow data
  // URL (absolute file path) to the workflow JSON or YAML file or raw JSON
  // string (simplified version of the full ServerlessWorkflow definition
  // (schema TO BE defined))
  oneof workflow_source {
    // URL or path to the workflow JSON or YAML file
    string url = 1;
    // the workflow JSON data string
    string json_data = 2;
  }

  // # Input
  // String input for the workflow context
  // Can be a plain string or JSON formatted string
  string input = 3;

  // # Workflow Context
  // Additional context information for workflow execution
  // Can be a plain string or JSON formatted string
  // context can be used in Jq expressions or Liquid templates variables
  optional string workflow_context = 4;
}
